--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,10 +85,14 @@
         <service
             android:name=".playMusic.PlayMusicService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
+        <service
+            android:name=".uploadLatLng.UploadLatLngService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- Push service 运行需要的权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
